--- a/public/css2/clothes.css
+++ b/public/css2/clothes.css
@@ -89,13 +89,14 @@
   
   
   
-  .PriceCard{
+  .Categorie{
     border-radius: 4px;
     background-color: var(--darkBlue);
     padding: 0.3125em;
-    font-size: 0.8em;
+    font-size: 0.9em;
     margin: 0.5em;
     color: white;
+    font-weight: 600;
   }
   
   .btn-icon {
@@ -134,6 +135,11 @@
   
   .image-containerCard img:hover {
     transform: scale(1.1);
+  }
+
+  .icon{
+    border:none;
+    background: none;
   }
   
   .information-containerCard {
