--- a/public/css2/Donate.css
+++ b/public/css2/Donate.css
@@ -103,7 +103,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
 }
 
 
