--- a/public/css2/clothes.css
+++ b/public/css2/clothes.css
@@ -139,7 +139,10 @@
 
   .icon{
     border:none;
-    background: none;
+    border-radius: 0.25rem;
+    padding: 0.8em;
+    background: black;
+    color:white;
   }
   
   .information-containerCard {
