--- a/public/css2/profile.css
+++ b/public/css2/profile.css
@@ -1,6 +1,6 @@
 .SelectedServicesInformationProfile table th {
     border-bottom: 1px solid #bfd4d8;
-    width: 60vw;
+    width: 70vw;
     padding: 1em 0;
   }
   
@@ -13,8 +13,7 @@
 
   th img{
  width: 10vw;
- /* width: auto; */
-    /* height: 100px; */
+
   }
   
   .ProfileInformation {
@@ -23,20 +22,8 @@
     padding: 1em;
   }
   
-  /* .ProfileImgInformation .divImg img {
-    width: 35vw;
-    
-  
-  } */
-  /* .ProfileImgInformation  .divImg{
-      border-right: 1px solid #dbdee1;
-      display: flex;
-    align-items: center;
-    justify-content: center;
-  } */
-  
   .ProfileImgInformation {
-    width: 80%;
+    width: 70%;
     display: flex;
     margin: 0 auto;
     border: 1px solid #dbdee1;
@@ -52,16 +39,10 @@
       margin: 0.6em 0;
     
   }
-  
-  /* .ProfileInformationUserName h2,.SelectedServicesInformationProfile h2{
-      margin: 1em 0;
-      font-size: 1.5em;
-  } */
 
   .ProfileInformation h3{
     font-size: 1.3em;
     margin: 1em 0;
-
 }
 
 .ProfileInformation h2{
@@ -79,22 +60,30 @@
         width: 20vw;
       
          }
-      /* .ProfileImgInformation  .divImg{
-          border:none;
-          border-bottom: 1px solid #dbdee1;
-        } */
-  
-        /* .ProfileImgInformation .divImg img {
-          width: 60vw;
-        } */
-  
-        /* .ProfileInformationUserName h2,.SelectedServicesInformationProfile h2{
-             font-size: 1em;
-        }
-  
-        .ProfileInformation h3{
-            font-size: 1em;
-        } */
-          
+
+         .ProfileInformation h3{
+          font-size: 1em;
+          margin: 1em 0;
+      }
+
+      .ProfileInformation h2{
+        font-size: 1em;
+        margin: 1em 0;
+      
+      }
+      .SelectedServicesInformationProfile table th {
+        font-size: 0.8em;
+      }
+      
+  }
+
+
+  @media (max-width:426px) {
+    .SelectedServicesInformationProfile table th {
+      font-size: 0.7em;
+    }
+    .ProfileImgInformation {
+      width: 99%;
+    }
   }
   
