contactus and admindashboard

--- a/public/css2/contactus.css
+++ b/public/css2/contactus.css
@@ -24,6 +24,17 @@
     padding: 1em;
 }
 
+.message{
+ color: #0f5132;
+ background-color: #d1e7dd;
+border:1px solid #badbcc;
+height: 10vh ;
+margin: 2em 0 ;
+padding: 0.5em;
+width: 35vw;
+}
+
+
 .ContactUsImgForm form button{
     height: 5vh;
     border: none;
@@ -45,8 +56,8 @@
        margin-bottom: 2em;
     }
 
-   .ContactUsImgForm form textarea {
-        width: 80vw;
+   .ContactUsImgForm form textarea,.message {
+        width: 90vw;
 
     }
 }
