--- a/public/css2/clothes.css
+++ b/public/css2/clothes.css
@@ -18,8 +18,30 @@
     justify-items: center;
     align-items: stretch;
     align-content: center;
-    grid-gap: 2em;
+    grid-gap: 1em;
   }
+
+  .searchForm{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2em;
+  }
+
+
+
+  .searchForm input ,label{
+    margin:  0.2em;
+  }
+
+  .searchForm button{
+    border:none;
+    border-radius: 0.25rem;
+    margin:  0.2em;
+    padding: 0.3em;
+    background: black;
+    color:white;
+  }
+ 
   
   
   
@@ -28,10 +50,23 @@
       grid-template-columns: auto auto;
     }
   }
-  @media only screen and (max-width: 575px) {
+  @media only screen and (max-width: 578px) {
    .ProductContainer .main-containerProduct{
       grid-template-columns: auto;
     }
+
+    .searchimg img{
+      width: 90vw;
+    }
+    .searchForm{
+      flex-direction: column;
+      align-items: center;
+    }
+    .searchForm button {
+      margin-top: 1em;
+    }
+
+   
   }  
     
 .image-containerCard img {
