clothes css and usercontorell

--- a/public/css2/clothes.css
+++ b/public/css2/clothes.css
@@ -1,10 +1,7 @@
 .ProductContainer{
     margin: 2em 0;
   }
-  .ProductContainer .titleProducts {
-    text-align: center;
-  }
-  
+ 
   .ProductContainer .titleProducts {
     text-align: center;
     margin-bottom: 1.2em;
@@ -15,10 +12,7 @@
     display: grid;
     grid-template-columns: auto auto auto;
     justify-content: center;
-    justify-items: center;
-    align-items: stretch;
-    align-content: center;
-    grid-gap: 1em;
+    grid-gap: 1em; 
   }
 
   .searchForm{
@@ -26,8 +20,6 @@
     justify-content: center;
     margin-bottom: 2em;
   }
-
-
 
   .searchForm input ,label{
     margin:  0.2em;
@@ -41,9 +33,70 @@
     background: black;
     color:white;
   }
+  
+  .image-containerCard {
+    display: flex;
+    padding: 0.625em;
+  }
+  
+  .image-containerCard img {
+    width: 9em;
+    height: 13em;
+    object-fit: cover;
+    border-radius: 8px;
+    margin: auto;
+  }
+
+  div .card-title {
+    font-weight: bold;
+  }
+  
+  
+  .Card {
+    width: 17em;
+    /* display: flex;
+    flex-direction: column;
+     align-content: space-around; 
+    align-items: stretch; 
+   justify-content: space-between;  */
+    border: 1px solid #cbcbcb; 
+     /* border-radius: 8px;  */
+     box-shadow: 0px 0px 3px 2px #ddd; 
+    /* overflow: hidden; */
+  }
+
+  .card-brief-description {
+    text-align: center;
+  }
+  
+  .Categorie{
+    padding: 0.3125em;
+    font-size: 0.9em;
+    margin: 0.5em;
+    color: white;
+    font-weight: 600;
+  }
+
+  .image-containerCard img:hover {
+    transform: scale(1.1);
+  }
+
+  .icon{
+    border:none;
+    border-radius: 0.25rem;
+    padding: 0.8em;
+    background: black;
+    color:white;
+  }
+  
+  .information-containerCard {
+    text-align: center;
+    padding: 0.5em;
+    background: #007991;
+    background: linear-gradient(#a7c6bc00, #9ebdc4);
  
-  
-  
+  }
+    
   
    @media   (max-width:900px)  {
    .ProductContainer .main-containerProduct{
@@ -69,95 +122,6 @@
    
   }  
     
-.image-containerCard img {
-    width: 9em;
-    height: 9em;
-    object-fit: cover;
-    transition: 0.5s ease;
-  }
-  
-  .image-containerCard {
-    background-color: #ffffff;
-    overflow: hidden;
-    padding: 0.625em;
-    position: relative;
-    display: flex;
-  }
-  
-  .image-containerCard img {
-    height: 13em;
-    object-fit: cover;
-    mix-blend-mode: initial;
-    border-radius: 8px;
-    margin: auto;
-  }
-  div .card-title {
-    font-weight: bold;
-    margin-bottom: 0;
-  }
-  
-  
-  .Card {
-    width: 17em;
-    display: flex;
-    flex-direction: column;
-    align-content: space-around;
-    align-items: stretch;
-    justify-content: space-between;
-    border: 1px solid #cbcbcb;
-    border-radius: 8px;
-    box-shadow: 0px 0px 3px 2px #ddd;
-    overflow: hidden;
-  }
-  .card-brief-description {
-    text-align: center;
-    margin-bottom: 0.1em;
-  }
-  .information-containerCard {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5em;
-  }
-  
-  
-  
-  .Categorie{
-    border-radius: 4px;
-    background-color: var(--darkBlue);
-    padding: 0.3125em;
-    font-size: 0.9em;
-    margin: 0.5em;
-    color: white;
-    font-weight: 600;
-  }
 
-  .image-containerCard img:hover {
-    transform: scale(1.1);
-  }
-
-  .icon{
-    border:none;
-    border-radius: 0.25rem;
-    padding: 0.8em;
-    background: black;
-    color:white;
-  }
-  
-  .information-containerCard {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5em;
-    background: #007991;
-    background: -webkit-linear-gradient(to bottom, #78ffd6, #007991);
-    background: linear-gradient(to bottom, #a7c6bc00, #9ebdc4);
-    background: -webkit-linear-gradient(to bottom, #4ca1af, #2c3e50);
-  }
-  
   
   
