--- a/public/css2/index.css
+++ b/public/css2/index.css
@@ -9,10 +9,23 @@
     margin: 2em 0;
 }
 
+.FeaturedBeneficiaries img ,.FeaturedVolunteers img{
+  width: 8vw;
+  display: flex;
+  margin:  1em auto;
+
+}
+
+
+
 @media (max-width:768px) {
     .BackgroundImg{
         min-height: 30vh;  
     } 
+
+    .FeaturedBeneficiaries img ,.FeaturedVolunteers img{
+      width: 15vw;
+    }
 }
 
 @media (max-width:425px) {
@@ -91,25 +104,17 @@
   
   }
   
-  .FeaturedBeneficiaries {
+  .FeaturedBeneficiaries , .FeaturedVolunteers  {
     border: 1px solid gray;
     box-shadow: 1px 1px 22px rgba(85, 84, 84, 0.11);
-    padding: 2em;
-    margin-right: 1em;
+    padding: 1em;
+    margin:0em 0.5em;
     border-radius: 4px;
     width:35%;
   
   }
   
-  .FeaturedVolunteers {
-    border: 1px solid gray;
-    box-shadow: 1px 1px 22px rgba(85, 84, 84, 0.11);
-    padding: 2em;
-    width: 35%;
-    border-radius: 4px;
-    
-  
-  }
+ 
   
   
   @media (max-width:881px) {
