--- a/public/css2/profile.css
+++ b/public/css2/profile.css
@@ -84,6 +84,11 @@
   margin: 1em 0;
 
 }
+
+   .messageprofile{
+      color: #50ad84;
+    margin: 1.5em 0;
+    }
   
   @media (max-width:726px) {
       .ProfileImgInformation {
@@ -141,8 +146,9 @@
       margin: 1em ;
       padding: 0.9em; 
       width: 60vw;
-    
     }
+
+ 
 
     .errorname{
       width: 60vw;
