--- a/public/css2/index.css
+++ b/public/css2/index.css
@@ -13,7 +13,6 @@
   width: 8vw;
   display: flex;
   margin:  1em auto;
-
 }
 
 
@@ -59,16 +58,16 @@
     text-align: center;
   }
   
-  .WeProvidep {
+  /* .WeProvidep {
     margin: 0 auto;
-  }
+  } */
   
-  @media (max-width: 768px) {
-    .WeProvidep p {
+  /* @media (max-width: 768px) { */
+    /* .WeProvidep p {
       width: 50%;
       text-align: center;
-    }
-  }
+    } */
+  /* } */
   
   @media (max-width: 551px) {
     .WeProvidep {
@@ -82,7 +81,7 @@
   
     .WeProvidep p {
       width: 90%;
-      text-align: center;
+      /* text-align: center; */
     }
   }
   
@@ -111,7 +110,6 @@
     margin:0em 0.5em;
     border-radius: 4px;
     width:35%;
-  
   }
   
  
